statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myapp-statefulset
  namespace: production

spec:
  serviceName: "myapp-service"
  replicas: 1

  selector:
    matchLabels:
      app: dbapp

  template:
    metadata:
      labels:
        app: dbapp

    spec:
      containers:
        - name: dbapp
          image: shaikmustafa/phpapp:dbimage

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/raja

  volumeClaimTemplates:
    - metadata:
        name: db-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
