dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: dbapp-service
  namespace: production
spec:
  selector:
    app: dbapp
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
